# kb-extract

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  ruff.toml  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skill/: SKILL.md
skill/scripts/: extract.ps1  extract.sh  verify.ps1  verify.sh
skills/kb-extract/: SKILL.md
src/kb_extract/: __init__.py  cli.py  contracts.py  discovery.py  errors.py  hardness.py  layout.py  manifest.py  orchestrator.py  redaction.py  serialization.py  source_manifest.py  source_md.py  verify.py  warnings_registry.py
tests/: conftest.py  test_atoms_cli.py  test_atoms_render.py  test_atoms_schema.py  test_cached_provider.py  test_category_node.py  test_cli.py  test_cli_output_dir.py  test_cli_taxonomy.py  test_contracts.py  test_cross_platform.py  test_determinism.py  test_discovery.py  test_docx_unknown_style_parens.py  test_docx_v2_image_assets.py  test_e2e.py  test_errors.py  test_github_models_provider.py  test_graph.py  test_h17_citation_uniqueness.py  test_h18_multi_source.py  test_h9_coverage_based.py  test_hardness.py  test_hardness_h22.py  test_image_utils.py  test_install_scripts.py  test_layout.py  test_manifest.py  test_memory_cli.py  test_memory_hooks.py  test_memory_store.py  test_modules.py  test_no_llm_imports.py  test_openai_compat.py  test_orchestrator.py  test_outline_confidence.py  test_pdf_front_matter_padding.py  test_pdf_heading_inference.py  test_pdf_tree.py  test_performance.py  (+46 more)
tests/fixtures/: SOURCES.md  (+1 more)
(+130 files in other folders)
