[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb-extract"
version = "0.4.0"
description = "Deterministic, hallucination-free document extraction pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "xumax" }]
license = { text = "MIT" }
dependencies = [
  "docling>=2.0,<2.99",
  "pymupdf>=1.24,<1.99",
  "python-docx>=1.1,<1.99",
  "openpyxl>=3.1,<3.99",
  "python-pptx>=1.0.2,<2.0",
  "Pillow>=10.0,<10.99",
  "langdetect>=1.0.9,<1.99",
  "python-magic>=0.4.27,<0.99; sys_platform != 'win32'",
  "python-magic-bin>=0.4.14,<0.99; sys_platform == 'win32'",
  "click>=8.1,<8.99",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<8.99",
  "pytest-cov>=4.1,<4.99",
  "pytest-socket>=0.7,<0.99",
  "syrupy>=4.6,<4.99",
  "ruff>=0.5,<0.99",
]

[project.scripts]
kb = "kb_extract.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_extract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --disable-socket"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "perf: performance benchmark tests",
]